$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2007-06-07 [A] Added Album and Category Title Search {drhammond}
2007-06-07 [A] Added phrase searching by double quotes {drhammond}
2007-06-07 [A] Added regular expressions to search {drhammond}
2007-06-06 [B] Fixed search parameters being ignored {drhammond}
2007-05-21 [C] Removed deprecated HTML tags from email templates {GauGau}
2007-05-21 [C] Replaced hard-coded bold tags with corresponding CSS formats in theme files {GauGau}
2007-05-21 [A] Added browse-by-date meta-album {GauGau}
2007-05-21 [B] Fixed charset for help pop-ups {GauGau}
2007-05-07 [O] Changed picture title and description from regular text to header formating for search engine friendliness {GauGau}
2007-05-07 [O] Added noindex & nofollow meta-tags to meta albums for search engine friendliness {GauGau}
2007-05-07 [O] Inversed order of items in title tag for search engine friendliness {GauGau}
2007-05-07 [A] Added option to hide stats on index page {GauGau}
2007-05-03 [O] Added various archive and OpenDocument file types support {GauGau}
2007-04-29 [D] Changed help function to reflect changes in documentation structure {GauGau}
2007-04-25 [C] Fixed workaround for missing translation in category manager {GauGau}
2007-04-20 [D] Added developer-section to documentation {GauGau}
2007-04-13 [D] Added link icons for anchors for easier reference on support board {GauGau}
2007-04-11 [D] Restructured documentation into several documents {GauGau}
2007-03-12 [A] Added sub-menu items to overall stats {GauGau}
2007-03-09 [A] Added pagination to overall hit stats {GauGau}